--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 <audio id="music">
   Your browser does not support HTML5 Audio!
 </audio>
-<ul id="music-list">Playlist <br/><br/>
-	<!-- 音樂清單 -->
-	<!-- <li></li> -->
-	<!-- <hr> -->
+<ul id="music-list">Playlist<br/><br/>
+	<li>
+		<div class="wrapper">
+			<div></div>
+			<div>Name</div>
+			<div>Artist</div>
+			<div></div>
+		</div>
+	</li>
+	<hr/>
 </ul>
 <div class="controll-panel">
 	<div class="center">
